[package]
name = "lcd-pcf8574"
version = "0.1.0"
authors = ["William R. Fraser <wfraser@codewise.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.4.4"
lcd = { git = "https://github.com/wfraser/lcd" }
