[package]
name = "lcd-pcf8574"
version = "0.1.1"
authors = ["William R. Fraser <wfraser@codewise.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.5.0"
lcd = { git = "https://github.com/wfraser/lcd", rev = "b62212d7441f916a9fcef7dad01279a30dcff6f8" }
