[package]
name = "lcd-pcf8574"
version = "0.2.0"
authors = ["William R. Fraser <wfraser@codewise.org>"]
edition = "2021"
description = "Hitachi HD44780-compatible LCD display attached to PCF8574 I2C expander"
repository = "https://github.com/wfraser/lcd-pcf8574"
categories = ["embedded"]
keywords = ["lcd", "hd44780", "pcf8574"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
i2cdev = "0.5.0"
lcd = "0.4.1"
